# my-test-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  plan.md  pyproject.toml  test_analyzer.py  test_executor.py  test_generator.py  test_repair.py
.github/workflows/: reject-python-bytecode.yml
configs/: default.yaml
docs/: analyzer.md  executor.md  generator.md
docs/superpowers/plans/: 2026-04-23-merge-generated-java-tests.md
docs/superpowers/specs/: 2026-04-08-test-agent-framework-design.md
failed_test_case/: CalculatorTest_failing.java  CalculatorTest_partial_coverage.java
logs/: claude-update-0410-add-multilanguage-support.md  codex-0410.md
prompts/: fix_test.txt  generate_test.txt
prompts/cpp/: fix_test.txt  generate_test.txt
prompts/java/: fix_test.txt  generate_test.txt
src/testagent/: __init__.py  cli_utils.py  config.py  models.py
src/testagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/testagent/analyzer/: __init__.py  base.py  dependency.py  java_parser.py
src/testagent/executor/: __init__.py  base.py  builder.py  coverage.py  (+1 more)
tests/: conftest.py  test_cli_utils.py  test_config.py
tests/test_analyzer/: test_dependency.py  test_java_analyzer.py  test_java_parser.py  test_java_test_summary.py  test_java_testable_methods.py
tests/test_executor/: test_builder.py  test_coverage.py  test_executor_script_all.py  test_runner.py  test_test_executor.py
tests/test_generator/: __init__.py  test_extract_code.py  test_llm_client.py  test_prompt.py  test_test_generator.py
under_test/sample-java-project/: pom.xml
(+20 files in other folders)
